checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000269265.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#47: 
> arch/i386/kernel/ioport.c:86: error: `per_cpu__init_tss' undeclared (first

ERROR:CORRUPTED_PATCH: patch seems to be corrupt (line wrapped?)
#140: FILE: arch/i386/kernel/apm.c:1988:
others?) */

The patch seems to be corrupted or lines are wrapped.
Please regenerate the patch file before sending it to the maintainer.

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#150: FILE: arch/i386/kernel/apm.c:1992:
+			_set_limit((char *)&per_cpu(cpu_gdt_table,
 			/* For the DEC Hinote Ultra CT475 (and others?) */

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#152: FILE: arch/i386/kernel/apm.c:1992:
+			_set_limit((char *)&per_cpu(cpu_gdt_table,
64 * 1024 - 1);

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#165: FILE: arch/i386/kernel/apm.c:1999:
+			_set_limit((char *)&per_cpu(cpu_gdt_table,
 				(apm_info.bios.cseg_16_len - 1) & 0xffff);

ERROR:CODE_INDENT: code indent should use tabs where possible
#174: FILE: arch/i386/kernel/apm.c:2004:
+        ^I                _set_limit((char *)&per_cpu(cpu_gdt_table,$

Code indent should use tabs instead of spaces.
Outside of comments, documentation and Kconfig,
spaces are never used for indentation.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#indentation

WARNING:SPACE_BEFORE_TAB: please, no space before tabs
#174: FILE: arch/i386/kernel/apm.c:2004:
+        ^I                _set_limit((char *)&per_cpu(cpu_gdt_table,$

WARNING:LEADING_SPACE: please, no spaces at the start of a line
#174: FILE: arch/i386/kernel/apm.c:2004:
+        ^I                _set_limit((char *)&per_cpu(cpu_gdt_table,$

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#176: FILE: arch/i386/kernel/apm.c:2005:
+        	                _set_limit((char *)&per_cpu(cpu_gdt_table,
                        if (apm_info.bios.dseg_len <= 0x40) { /* 0x40 * 4kB

CHECK:PARENTHESIS_ALIGNMENT: Alignment should match open parenthesis
#177: FILE: arch/i386/kernel/apm.c:2005:
+        	                _set_limit((char *)&per_cpu(cpu_gdt_table,
== 64kB */

ERROR:CODE_INDENT: code indent should use tabs where possible
#181: FILE: arch/i386/kernel/apm.c:2007:
+                        ^Iper_cpu(cpu_gdt_table, i)[APM_DS >> 3].b |=$

WARNING:SPACE_BEFORE_TAB: please, no space before tabs
#181: FILE: arch/i386/kernel/apm.c:2007:
+                        ^Iper_cpu(cpu_gdt_table, i)[APM_DS >> 3].b |=$

WARNING:SUSPECT_CODE_INDENT: suspect code indent for conditional statements (0, 0)
#193: FILE: drivers/pnp/pnpbios/bioscalls.c:71:
 do { \
+set_base(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], __va((u32)(address)));

ERROR:SPACING: space required after that ',' (ctx:VxV)
#196: FILE: drivers/pnp/pnpbios/bioscalls.c:72:
+set_base(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], __va((u32)(address)));
                               ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space required after that ',' (ctx:VxV)
#198: FILE: drivers/pnp/pnpbios/bioscalls.c:73:
+set_limit(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], size); \
                                ^

WARNING:LINE_CONTINUATIONS: Avoid unnecessary line continuations
#198: FILE: drivers/pnp/pnpbios/bioscalls.c:73:
+set_limit(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], size); \

WARNING:SUSPECT_CODE_INDENT: suspect code indent for conditional statements (0, 0)
#202: FILE: drivers/pnp/pnpbios/bioscalls.c:77:
 do { \
+set_base(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], (u32)(address)); \

ERROR:SPACING: space required after that ',' (ctx:VxV)
#205: FILE: drivers/pnp/pnpbios/bioscalls.c:78:
+set_base(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], (u32)(address)); \
                               ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#206: FILE: drivers/pnp/pnpbios/bioscalls.c:79:
+set_limit(per_cpu(cpu_gdt_table,cpu)[(selname) >> 3], size); \
                                ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#216: FILE: drivers/pnp/pnpbios/bioscalls.c:118:
+	save_desc_40 = per_cpu(cpu_gdt_table,cpu)[0x40 / 8];
 	                                    ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#217: FILE: drivers/pnp/pnpbios/bioscalls.c:119:
+	per_cpu(cpu_gdt_table,cpu)[0x40 / 8] = bad_bios_desc;
 	                     ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#226: FILE: drivers/pnp/pnpbios/bioscalls.c:161:
+	per_cpu(cpu_gdt_table,cpu)[0x40 / 8] = save_desc_40;
 	                     ^

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000269265.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 10 errors, 7 warnings, 5 checks, 136 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

NOTE: Whitespace errors detected.
      You may wish to use scripts/cleanpatch or scripts/cleanfile

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000269265.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
